--- a/css/ihover.css
+++ b/css/ihover.css
@@ -2598,10 +2598,10 @@
   overflow: hidden;
 }
 .ih-item.square.effect2.colored .info {
-  background: #1a4a72;
+  background: rgba(240,95,64,0.8);
 }
 .ih-item.square.effect2.colored .info h3 {
-  background: rgba(12, 34, 52, 0.6);
+  background: rgba(240,95,64,0.8);
 }
 .ih-item.square.effect2 .img {
   opacity: 1;
@@ -2615,7 +2615,7 @@
   transform: rotate(0deg) scale(1);
 }
 .ih-item.square.effect2 .info {
-  background: #333333;
+  background: rgba(240,95,64,0.8);
   visibility: hidden;
   -webkit-transition: all 0.35s 0.3s ease-in-out;
   -moz-transition: all 0.35s 0.3s ease-in-out;
@@ -2623,11 +2623,11 @@
 }
 .ih-item.square.effect2 .info h3 {
   text-transform: uppercase;
-  color: #fff;
+  color: black;
   text-align: center;
   font-size: 17px;
-  padding: 10px;
-  background: #111111;
+  padding: 30px;
+  background: #E6E6FA;
   margin: 30px 0 0 0;
   -webkit-transform: translateY(-200px);
   -moz-transform: translateY(-200px);
